--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   angular_components: any
   angular_router: any
   http: any
+  bloc: ^6.1.3
 
 dev_dependencies:
   angular_test: any
